# dis

./: .gitignore  Cargo.toml  README.md  hello.dis  test.dis
examples/: debug.dis  divisible.dis  fib.dis  fib2.dis  fizzbuzz.dis  fuck.bf.dis  fuck.dis  hello.dis  include.dis  input.dis  mul.dis  rln.dis  simple.dis  test0.dis  test1.dis  test3.dis  to_upper.dis
examples/err/: circular1-0.dis  circular1-1.dis  circular1-2.dis  circular1.dis  circular2.dis  invalid.dis  mislabel.dis
src/: dis-test.rs  dis.rs  lexer-test.rs  lexer.rs  lib.rs  main.rs  statement.rs
src/vis/: main.rs
